[project]
name = "ats-resume-checker"
version = "0.1.0"
description = "Modular AI-powered resume and job analysis platform using CrewAI and MCP servers. Features include resume parsing, job description analysis, ATS optimization, real-time feedback, scoring, bulk comparison, cultural fit insights, and PDF report generation."
authors = [{ name = "Kaushal Prajapati", email = "kaushalprajapati5296@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    # Core Framework
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "python-multipart>=0.0.9",
    
    # AI and ML
    "crewai[tools]>=0.108.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-core>=0.1.10",
    "langchain-groq>=0.0.1",
    "langchain-google-genai>=0.0.5",
    "google-generativeai>=0.3.2",
    
    # Vector Stores
    "pinecone-client>=3.0.0",
    "psycopg2-binary>=2.9.0",
    
    # Document Processing
    "unstructured>=0.11.0",
    "python-docx>=1.0.0",
    "PyPDF2>=3.0.0",
    
    # HTTP and Environment
    "httpx>=0.26.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    
    # Logging
    "loguru>=0.7.0",
    
    # Weather API (if needed)
    "pyowm>=3.3.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "isort>=5.13.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ats_resume_checker"]

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
